--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
+alembic==0.7.5.post2
 Flask==0.10.1
+Flask-Migrate==1.3.1
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.0
 gunicorn==19.3.0
 honcho==0.6.6
 itsdangerous==0.24
 Jinja2==2.7.3
+Mako==1.0.1
 MarkupSafe==0.23
+psycopg2==2.6
 py==1.4.26
 pytest==2.7.0
+SQLAlchemy==0.9.9
 Werkzeug==0.10.4
