--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
+DATABASE_AUTO_MIGRATE=1
 DATABASE_URI=postgresql://:@localhost:5432/pikka_bird_receiver_dev
-DEBUG=1
 GUNICORN_W=1
 HOST=127.0.0.1
+LOG_LEVEL=DEBUG
 PORT=5000
