Rebrand pikka_bird_receiver => pikka_bird_server .

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URI=postgresql://:@localhost:5432/pikka_bird_receiver_dev
+DATABASE_URI=postgresql://:@localhost:5432/pikka_bird_dev
 GUNICORN_W=1
 HOST=127.0.0.1
 LOG_LEVEL=DEBUG
