--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DATABASE_URI=postgresql://:@localhost:5432/pikka_bird_dev
-GUNICORN_W=1
-HOST=127.0.0.1
+IP=127.0.0.1
 LOG_LEVEL=DEBUG
 PORT=5000
+WORKERS=1
