--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - '3.4'
+addons:
+  postgresql: '9.3'
 install:
   - "pip install ."
   - "pip install -r requirements.txt"
