--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - "pip install -r requirements.txt"
 before_script:
   - "psql -c 'CREATE DATABASE pikka_bird_test;' -U postgres"
-  - "bin/pikka-bird-server -c database-migrate -d postgresql://:@localhost:5432/pikka_bird_test"
+  - "python pikka_bird_server/manager.py db upgrade"
 script: "py.test -sv"
 env:
   - DATABASE_URI=postgresql://:@localhost:5432/pikka_bird_test LOG_LEVEL=INFO
